a couple useful bookmarks

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>CodingAt London</h1>
+
+<h2>Public resources</h2>
+
+<ul>
+    <li><a href="https://www.eventbrite.co.uk/o/coding-8226218245">Eventbrite</a></li>
+    <li><a href="https://scratch.mit.edu/users/codingat_london">Scratch</a></li>
+</ul>
