--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
-<h1>CodingAt London</h1>
+<!DOCTYPE html PUBLIC
+        "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="EN" xml:lang="EN" dir="ltr">
+<head>
+    <meta http-equiv="content-type" content="text/xml; charset=utf-8"/>
+    <title>CodingAt London</title>
+    <style type="text/css">
+    </style>
+</head>
 
-<h2>Public resources</h2>
-
-<ul>
-    <li><a href="https://www.eventbrite.co.uk/o/coding-8226218245">Eventbrite</a></li>
-    <li><a href="https://scratch.mit.edu/users/codingat_london">Scratch</a></li>
-    <li><a href="https://tutorial.dewardt.uk/">CodingAt original tutorials</a></li>
-</ul>
+<body>
+    <h1>CodingAt London</h1>
+    <h2>Public resources</h2>
+    <ul>
+        <li><a href="https://www.eventbrite.co.uk/o/coding-8226218245">Eventbrite</a></li>
+        <li><a href="https://scratch.mit.edu/users/codingat_london">Scratch</a></li>
+        <li><a href="https://tutorial.dewardt.uk/">CodingAt original tutorials</a></li>
+    </ul>
+</body>
+</html>
