logo and colours

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
     <meta http-equiv="content-type" content="text/xml; charset=utf-8"/>
     <title>CodingAt London</title>
-    <style type="text/css">
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+    <div id="header">&nbsp;</div>
     <h1>CodingAt London</h1>
     <h2>Public resources</h2>
     <ul>
