add links to raspberry pi tutorials

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li><a href="https://www.eventbrite.co.uk/o/coding-8226218245">Eventbrite</a></li>
         <li><a href="https://scratch.mit.edu/users/codingat_london">Scratch</a></li>
         <li><a href="https://tutorial.dewardt.uk/">CodingAt original tutorials</a></li>
+        <li><a href="https://projects.raspberrypi.org/en/projects?software%5B%5D=scratch">Scratch projects (Raspberry PI foundation)</a></li>
+        <li><a href="https://projects.raspberrypi.org/en/projects?software%5B%5D=python">Python projects (Raspberry PI foundation)</a></li>
     </ul>
 </body>
 </html>
